# cctv-gpu-engine

./: .env.client.example  .env.example  .env.gpu.example  .gitignore  .pre-commit-config.yaml  DECISION_LOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RTX5070_CONSTRAINTS.md  SPEC.md  docker-compose.appliance.yml  docker-compose.client.yml  docker-compose.yml  pyproject.toml  setup-models.sh
.claude/: CLAUDE.md  settings.json
.github/workflows/: docker.yml  tests.yml
benchmark-results/issue-101/: README.md  baseline_640.json  baseline_640x384.json  full_frame_1280x736.json
benchmark-results/issue-110/: README.md  tiled_1280x736.json  tiled_fullframe_1280x736.json  tiled_zones_1280x736.json
benchmark-results/issue-86/: README.md  baseline_640.json  focused_roi_640.json  full_frame_1280.json  selection.json
benchmarks/activity/: README.md
benchmarks/activity/magazyn-hall-v1/: .gitignore  METHODOLOGY.md  manifest.proposed.json  manifest.scaffold.json
benchmarks/activity/tools/: build_activity_annotation.py  propose_activity_labels.py  render_proposal_review.py
benchmarks/pose-resolution/bending-pilot-v1/: ASSET.md  METHODOLOGY.md  assets.sha256  manifest.json  zones.json
benchmarks/pose-resolution/films-v1/: ASSET.md  METHODOLOGY.md  assets.sha256
benchmarks/pose-resolution/films-v1/film-1/: manifest.json
benchmarks/pose-resolution/films-v1/film-2/: manifest.json
benchmarks/pose-resolution/magazyn-hall-v1/: ASSET.md  METHODOLOGY.md  assets.sha256  manifest.json  motion_aid.py  zones-roi.json  zones.json
client-agent/: Dockerfile
client-agent/client_agent/: __init__.py  agent.py  agent_test.py  appliance.py  appliance_test.py  buffer.py  buffer_test.py  build_info.py  build_info_test.py  discovery.py  discovery_test.py  ffmpeg_segment_naming_test.py  ffmpeg_trim.py  ffmpeg_trim_test.py  independence_test.py  mediamtx_integration_test.py  platform.py  platform_test.py  poller.py  poller_test.py  r2_client.py  r2_client_test.py  recorder.py  recorder_test.py  recording_health.py  recording_health_test.py  runtime_config.py  runtime_config_test.py  snapshot.py  snapshot_poller.py  snapshot_poller_test.py  snapshot_test.py  telemetry.py  telemetry_test.py  uploader.py  uploader_test.py  web.py  web_test.py
client-appliance/: README.md  audit-appliance.sh  cameras.env.example  cctv-client-user.service  cctv-client.service  install-user.sh  install.sh  platform.env.example  r2.env.example
client-appliance/tests/: audit_appliance_script_test.py  env_examples_test.py  install_script_test.py  install_user_script_test.py  readme_test.py  systemd_unit.py  unit_file_test.py  user_unit_file_test.py
datasets/activity-classifier/: .gitignore  ARTIFACTS.md  README.md  geometries.json  labels.jsonl  quota-plan.json  review-decisions.json  review-record.json  selection-summary.json  source-manifest.json
docs/: NONSQUARE_POSE_INPUT.md  POSE_RESOLUTION_BENCHMARK.md  SETUP_CLIENT.md  SETUP_GPU.md  mlp-classifier-eval.md
gpu-service/: Dockerfile
gpu-service/gpu_service/: __init__.py  dashboard.py  dashboard_test.py  ffmpeg_concat.py  ffmpeg_concat_test.py  http_client.py  http_client_test.py  http_retry.py  http_retry_test.py  metrics.py  metrics_test.py  r2_client.py  r2_client_test.py  rest_api.py  rest_api_test.py  rest_server.py  rest_server_test.py  task_runner.py  task_runner_test.py  tenant_url.py  tenant_url_test.py  vram_preflight.py  vram_preflight_test.py  worker.py  worker_test.py
jobs/: notes.md  raport-zleceniodawca.md
pipeline/: README.md  __init__.py  activity_classifier.py  activity_classifier_test.py  activity_dataset.py  activity_dataset_collection.py  activity_dataset_collection_test.py  activity_dataset_review.py  activity_dataset_review_test.py  activity_dataset_selection.py  activity_dataset_selection_test.py  activity_dataset_test.py  activity_features.py  activity_features_test.py  aggregator.py  aggregator_test.py  analyze.py  analyze_test.py  annotator.py  annotator_test.py  conversation.py  conversation_test.py  detection_scale.py  detection_scale_test.py  detections_dump.py  detections_dump_test.py  frame_extractor.py  frame_extractor_test.py  mlp_classifier.py  mlp_classifier_test.py  pose_benchmark.py  pose_benchmark_perf_test.py  pose_benchmark_test.py  pose_detector.py  pose_detector_test.py  postprocessing.py  postprocessing_test.py  preprocessing.py  preprocessing_test.py  presence.py  (+20 more)
plans/: client-appliance.md  surveillance-prototype.md
scripts/: deploy-image.sh  setup-docker-disk-cron.sh  test_vlm_classifier.py
test/: Dockerfile  export_pose_model.sh  requirements.txt  run_test.sh  test_video_pose.py
tests/: build_config_test.py  deploy_image_script_test.py  no_r2_creds_in_appliance_flow_test.py  r2_client_parity_test.py
training/activity-mlp/: benchmark_latency.py  benchmark_resources.py  eval.py  eval_films.py  feature-schema.json  films-ground-truth.json  train.py
training/activity-mlp/activity_mlp/: __init__.py  baseline_cli.py  baseline_cli_test.py  data.py  data_test.py  evaluation.py  evaluation_cli.py  evaluation_cli_test.py  evaluation_test.py  film_agreement.py  film_agreement_test.py  film_artifact_test.py  latency_artifact_test.py  latency_benchmark.py  latency_benchmark_test.py  release_dataset.py  release_dataset_test.py  resource_artifact_test.py  resource_benchmark.py  resource_benchmark_test.py  training.py  training_cli.py  training_cli_test.py  training_test.py
training/activity-mlp/results/: README.md  baselines.json  films-agreement.json  frozen-test-evaluation.json  latency-rtx5070.json  model-metadata.json  resources-rtx5070-film1.json  training-history.json
