[project]
name = "cctv-gpu-engine"
version = "0.1.0"
description = "Batch surveillance video analysis: MP4 → YOLO-pose → activity classification → standalone HTML report"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    # Linux: real GPU runtime. The [cuda,cudnn] extras pull nvrtc/runtime/cufft/
    # curand/cudnn but NOT cublas, so we add nvidia-cublas-cu12 manually —
    # without it onnxruntime silently falls back to CPU (libcublasLt.so.12 missing).
    "onnxruntime-gpu[cuda,cudnn]>=1.17 ; sys_platform == 'linux'",
    "nvidia-cublas-cu12>=12.0 ; sys_platform == 'linux'",
    # macOS / dev: CPU-only stub so imports work in unit tests. Production
    # GPU code path is guarded by `load_pose_model` and never runs CPU.
    "onnxruntime>=1.17 ; sys_platform != 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["pipeline"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "-m", "not gpu and not integration",
]
markers = [
    "gpu: requires NVIDIA GPU with CUDAExecutionProvider (skipped by default)",
    "integration: requires real ffmpeg binary or real video file (skipped by default)",
]
