[project]
name = "cctv-gpu-engine"
version = "0.1.0"
description = "Batch surveillance video analysis: MP4 → YOLO-pose → activity classification → standalone HTML report"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
]

# ONNX Runtime is opt-in to keep `uv sync` lightweight (~50MB instead of ~1.5GB).
# Pick exactly one extra:
#   uv sync --extra gpu       → real GPU runtime (Linux + NVIDIA only, used in
#                                gpu-service container and on the cctv-vps box)
#   uv sync --extra cpu-stub  → CPU-only onnxruntime, just so `import onnxruntime`
#                                works for unit tests on macOS / dev boxes. The
#                                production code path is guarded by
#                                `load_pose_model` and never falls back to CPU.
[project.optional-dependencies]
gpu = [
    # The [cuda,cudnn] extras pull nvrtc/runtime/cufft/curand/cudnn but NOT
    # cublas, so we add nvidia-cublas-cu12 manually — without it onnxruntime
    # silently falls back to CPU (libcublasLt.so.12 missing).
    "onnxruntime-gpu[cuda,cudnn]>=1.17 ; sys_platform == 'linux'",
    "nvidia-cublas-cu12>=12.0 ; sys_platform == 'linux'",
]
cpu-stub = [
    "onnxruntime>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
# Project supports Python 3.11+ (see `requires-python`); using py311 prevents
# `UP` rules from suggesting rewrites that only work on 3.12+. Issue #10
# proposed py312 — corrected here to match the actual minimum.
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["pipeline", "tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "-m", "not gpu and not integration",
]
markers = [
    "gpu: requires NVIDIA GPU with CUDAExecutionProvider (skipped by default)",
    "integration: requires real ffmpeg binary or real video file (skipped by default)",
]
