[project]
name = "cctv-gpu-engine"
version = "0.1.0"
description = "Batch surveillance video analysis: MP4 → YOLO-pose → activity classification → standalone HTML report"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "jinja2>=3.1",
    # R2 / S3 client used by gpu-service worker (issue #5) and the future
    # client-agent uploader (Phase 5). Pure Python, ~10MB — does not break
    # the lightweight default install (issue #9).
    "boto3>=1.34",
    # Flask powers the client-agent web UI (issue #7) — MP4 upload form, job
    # list, report viewer. Pure Python, ~6MB, no native deps. Lives in the
    # default install (not behind an extra) so the client-agent Docker image
    # gets it via plain `uv sync` and the same wheel cache the gpu-service
    # build uses.
    "flask>=3.0",
    # ONVIF camera discovery for the client-agent (issue #21).
    # ``WSDiscovery`` runs WS-Discovery multicast (UDP 239.255.255.250:3702),
    # ``onvif-zeep`` does the per-device SOAP (GetDeviceInformation /
    # GetStreamUri / GetSnapshotUri). Both pull pure-Python deps (zeep,
    # lxml) — ~15 MB total. Live in the default install so the docker
    # client-agent image gets them via plain ``uv sync``; the standalone
    # appliance entrypoint (Phase 3) will reuse the same package.
    "WSDiscovery>=2.0",
    "onvif-zeep>=0.2",
    # Tuya local-broadcast camera discovery for Stage 3 (issue #38).
    # Listens on UDP 6666/6667 — purely passive, no cloud creds — to
    # surface Setti+/Tapo/Vstarcam-style IPCs that ship with RTSP
    # disabled and are therefore invisible to ONVIF + RTSP port scan.
    # Pure Python, ~1 MB, MIT-licensed.
    "tinytuya>=1.13",
    # WSGI server for the standalone appliance entrypoint (issue #23).
    # Multithreaded, pure Python, ~1 MB. Replaces Werkzeug's dev server
    # for bare-metal deployments where concurrent UI requests matter; the
    # Docker entrypoint still uses Werkzeug because docker-compose treats
    # the container as a single-tenant fixture.
    "waitress>=3.0",
    # HTTP client for the GPU Exchange platform-integration adapter
    # (issue #26). Used by ``client_agent.platform.PlatformClient`` for
    # register / push_cameras / heartbeat. httpx (sync API) is paired
    # with respx in tests; both are small (~2MB combined), pure Python.
    "httpx>=0.27",
    # First-party IANA tz database for ``zoneinfo`` — powers the DST-safe
    # shift-window gating (issue #79, ``pipeline.zones.ShiftSchedule``).
    # Pure-Python, ~5MB. A direct dep so ``ZoneInfo("Europe/Warsaw")`` resolves
    # even where the base image ships no system /usr/share/zoneinfo, keeping the
    # gating deterministic across the container and dev boxes.
    "tzdata>=2024.1",
]

# ONNX Runtime is opt-in to keep `uv sync` lightweight (~50MB instead of ~1.5GB).
# Pick exactly one extra:
#   uv sync --extra gpu       → real GPU runtime (Linux + NVIDIA only, used in
#                                gpu-service container and on the cctv-vps box)
#   uv sync --extra cpu-stub  → CPU-only onnxruntime, just so `import onnxruntime`
#                                works for unit tests on macOS / dev boxes. The
#                                production code path is guarded by
#                                `load_pose_model` and never falls back to CPU.
[project.optional-dependencies]
gpu = [
    # The [cuda,cudnn] extras pull nvrtc/runtime/cufft/curand/cudnn but NOT
    # cublas, so we add nvidia-cublas-cu12 manually — without it onnxruntime
    # silently falls back to CPU (libcublasLt.so.12 missing).
    "onnxruntime-gpu[cuda,cudnn]>=1.17 ; sys_platform == 'linux'",
    "nvidia-cublas-cu12>=12.0 ; sys_platform == 'linux'",
    # Per-job telemetry collected by gpu_service.metrics.SystemMetricsCollector:
    # psutil for CPU/RAM/disk, nvidia-ml-py (the official NVML wrapper, imported
    # as `pynvml`) for GPU utilization/temp/memory. Linux-only because the
    # collector only runs inside the gpu-service container on the GPU box;
    # macOS dev unit tests use the in-memory FakeMetricsCollector instead.
    "psutil>=6.0 ; sys_platform == 'linux'",
    "nvidia-ml-py>=12.0 ; sys_platform == 'linux'",
]
cpu-stub = [
    "onnxruntime>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "pre-commit>=3.7",
    # respx mocks the httpx transport — same library used by
    # ``client_agent.platform`` (issue #26). Tests assert request
    # method / URL / headers / body without binding a socket.
    "respx>=0.21",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
# Project supports Python 3.11+ (see `requires-python`); using py311 prevents
# `UP` rules from suggesting rewrites that only work on 3.12+. Issue #10
# proposed py312 — corrected here to match the actual minimum.
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
# `gpu-service/` is the future docker build context (issue #5 / Phase 4) — the
# Python package lives inside it as `gpu-service/gpu_service/` so a future
# Dockerfile can `COPY gpu-service/gpu_service /app/gpu_service` without
# pulling unrelated repo files. We add it to pythonpath so pytest can import
# `gpu_service.worker` from the underscore-named package even though the
# parent dir uses a hyphen (which Python imports cannot).
testpaths = [
    "pipeline",
    "tests",
    "gpu-service",
    "client-agent",
    "client-appliance",
    "training/activity-mlp",
]
pythonpath = [".", "gpu-service", "client-agent", "training/activity-mlp"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "-m", "not gpu and not integration",
]
markers = [
    "gpu: requires NVIDIA GPU with CUDAExecutionProvider (skipped by default)",
    "integration: requires real ffmpeg binary or real video file (skipped by default)",
    "perf: validates a measured performance artifact from representative GPU data",
]
